--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="71889615345-oo8rp8ct72njqot04dv8g1709sqchnkp.apps.googleusercontent.com.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="71889615345-u60mk21l7e1rgrbd4ua8gd52un9esej5.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
   <body>
