--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
         console.log("ID Token: " + id_token);
+        
+        localStorage.setItem('user', aaaaaa);
+        location.href="youtube.com"
       }
     </script>
   </body>
